View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028230 | Open CASCADE | OCCT:Modeling Data | public | 2016-12-16 10:30 | 2017-09-29 16:31 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028230: Convert C0 2d curve to C1 raises exception | ||||
Description | The method Geom2dConvert::C0BSplineToC1BSplineCurve raises exception in some cases. The corresponding draw command is splitc12d. It is strange that if we call it with tolerance 1e-7 it does not raise exception, and does not modify the curve. The curve remains C0. If we call it with tolerance 1e-6 the curve becomes C1. If we call it with tolerance 1e-5 (default for draw command) it raises exception. The method should have consistent behavior. This bug was the cause of the bug #28221, which was fixed by another way. | ||||
Steps To Reproduce | restore bug28230_edge.brep e mk2dcurve pc e 2 splitc12d pc 0 | ||||
Tags | No tags attached. | ||||
Test case number | bugs moddata_3 bug28230 | ||||
2016-12-16 12:13 developer |
bug28230_edge.brep (80,321 bytes) |
|
Branch CR28230 has been created by ifv. SHA-1: 7d3df48b6e5c8a8735ec0d94b499f8b3d1a4d64d Detailed log of new commits: Author: ifv Date: Mon Jan 9 09:41:22 2017 +0300 0028230: Convert C0 2d curve to C1 raises exception The treatment of small curves (length of curves is less then tolerance used for checking G1) is added in Geom2dConvert_CompCurveToBSplineCurve.cxx |
|
Branch CR28230 is ready for review |
|
Branch CR28230 has been updated by msv. SHA-1: c85d5631173419be790bafdd368bb13145210f36 Detailed log of new commits: Author: msv Date: Thu Jan 19 12:10:13 2017 +0300 // small optimization and creation of test case |
|
Please test. |
|
Branch CR28230 has been updated forcibly by apv. SHA-1: 1e99695a7d46405196a585d15dc0369e24c72426 |
|
Branch CR28230 has been rebased on the current master |
|
Dear BugMaster, Branch CR28230 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 1e99695a7d46405196a585d15dc0369e24c72426 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 63 Windows: 0 MacOS: 1163 Regressions/Differences: Not detected Testing cases: bugs moddata_3 bug28230 - OK http://occt-tests/CR28230-master-OCCT/Debian70-64/bugs/moddata_3/bug28230.html http://occt-tests/CR28230-master-OCCT/Windows-64-VC10/bugs/moddata_3/bug28230.html Testing on Linux: Total MEMORY difference: 92960529 / 92072858 [+0.96%] Total CPU difference: 21099.150000000125 / 21062.360000000153 [+0.17%] Testing on Windows: Total MEMORY difference: 58324848 / 58324216 [+0.00%] Total CPU difference: 19486.28771129849 / 19152.585972198493 [+1.74%] |
|
Branch CR28230 has been deleted by kgv. SHA-1: 1e99695a7d46405196a585d15dc0369e24c72426 |
occt: master 2dad173d 2017-01-26 09:51:09
Committer: apn Details Diff |
0028230: Convert C0 2d curve to C1 raises exception The treatment of small curves (length of curves is less then tolerance used for checking G1) is added in Geom2dConvert_CompCurveToBSplineCurve.cxx |
Affected Issues 0028230 |
|
mod - src/Geom2dConvert/Geom2dConvert.cxx | Diff File | ||
mod - src/Geom2dConvert/Geom2dConvert_CompCurveToBSplineCurve.cxx | Diff File | ||
add - tests/bugs/moddata_3/bug28230 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-12-16 10:30 |
|
New Issue | |
2016-12-16 10:30 |
|
Assigned To | => msv |
2016-12-16 10:32 |
|
Assigned To | msv => ifv |
2016-12-16 10:32 |
|
Status | new => assigned |
2016-12-16 10:32 |
|
Description Updated | |
2016-12-16 12:13 |
|
Steps to Reproduce Updated | |
2016-12-16 12:13 |
|
File Added: bug28230_edge.brep | |
2017-01-10 17:55 | git | Note Added: 0062463 | |
2017-01-10 17:56 |
|
Note Added: 0062464 | |
2017-01-10 17:56 |
|
Assigned To | ifv => msv |
2017-01-10 17:56 |
|
Status | assigned => resolved |
2017-01-19 12:10 | git | Note Added: 0062786 | |
2017-01-19 12:11 |
|
Note Added: 0062787 | |
2017-01-19 12:11 |
|
Assigned To | msv => bugmaster |
2017-01-19 12:11 |
|
Status | resolved => reviewed |
2017-01-20 18:01 | git | Note Added: 0062859 | |
2017-01-20 18:02 |
|
Note Added: 0062860 | |
2017-01-20 18:02 |
|
Test case number | => bugs moddata_3 bug28230 |
2017-01-20 18:02 |
|
Assigned To | bugmaster => apv |
2017-01-24 14:29 |
|
Note Added: 0062943 | |
2017-01-24 14:29 |
|
Assigned To | apv => bugmaster |
2017-01-24 14:29 |
|
Status | reviewed => tested |
2017-01-27 16:15 | apn | Changeset attached | => occt master 2dad173d |
2017-01-27 16:15 | apn | Assigned To | bugmaster => apn |
2017-01-27 16:15 | apn | Status | tested => verified |
2017-01-27 16:15 | apn | Resolution | open => fixed |
2017-02-08 11:35 | git | Note Added: 0063598 | |
2017-09-29 16:21 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:31 |
|
Status | verified => closed |